--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## MariaDB
-spring.datasource.url=jdbc:mariadb://localhost:3306/cronus
+spring.datasource.url=jdbc:mariadb://localhost:3306/cronus?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
