--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 
 spring.devtools.livereload.enabled=true
+
+
+# Cloudinary
+cloudinary.cloudName=dr5hzni4j
+cloudinary.apiKey=672749346223676
+cloudinary.apiSecret=ucUv2F467mVIZ1v5aEn9H5jxG2w
